<resources>
    <string name="app_name">TaskManagerApp</string>
    <string name="_2025_incloudlogic_llc">© 2025 INCLOUDLOGIC, LLC</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter a valid address: only @gmail.com or @incloudlogic.com</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="create">Create</string>
    <string name="new_task">New task</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="task_title">Task Title</string>
    <string name="task_content_preview_goes_here">Task content preview goes here...</string>
    <string name="error_fill_all_fields">All fields mus be filled</string>
    <string name="task_added">added</string>
    <string name="task_updated">Task updated</string>
    <string name="update">Update</string>
    <string name="delete_task">Delete task</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="icplatform">ICPlatform</string>
    <string name="offline_mode_no_login_required">Offline Mode (No Login Required)</string>
    <string name="sorting">Sorting</string>
    <string-array name="tasks">
        <item>IncidentTracker</item>
        <item>ChangeMonitor</item>
        <item>AssetManager</item>
        <item>RequestFlow</item>
    </string-array>
    <string-array name="priority">
        <item>Critical</item>
        <item>Major</item>
        <item>Normal</item>
    </string-array>
</resources>
