<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".ui.AddTaskActivity">

    <TextView
        android:id="@+id/addTaskHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/new_task"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/addTaskHeading"
        android:layout_marginTop="15dp"
        android:background="@drawable/task_border"
        android:hint="@string/enter_the_title"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="20sp"
        android:entries="@array/tasks"/>



    <EditText
        android:id="@+id/taskContent"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/task_border"
        android:layout_below="@+id/taskTitle"
        android:gravity="top"
        android:hint="@string/enter_the_description"
        android:padding="12dp"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskContent"
        android:padding="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/create"
        app:cornerRadius="8dp" />

</RelativeLayout>